[package]
name = "av-contrib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Contributor-side byte and media access-unit helpers for av-mesh"
repository = "https://github.com/wavey-ai/av-contrib"
readme = "README.md"

[features]
default = []
media_capability_enforce_publish_v1 = []

[dependencies]
access-unit = { git = "https://github.com/wavey-ai/access-unit.git" }
anyhow = "1.0"
async-trait = "0.1"
boxer = { git = "https://github.com/wavey-ai/boxer.git" }
bytes = "1.9"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
form_urlencoded = "1.2"
futures-util = "0.3"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h264 = { git = "https://github.com/wavey-ai/av-rs.git" }
av-hls = { path = "../av-service/av-hls" }
http = "1"
mpeg2ts-reader = { git = "https://github.com/wavey-ai/mpeg2ts-reader.git" }
media-object = { path = "../media-object" }
media-capability = { path = "../needletail/crates/media-capability" }
music-audio-session = { path = "../raptor-fec/crates/music-audio-session" }
playlists = { path = "../playlists" }
raptorq-datagram-fec = { path = "../raptor-fec/crates/raptorq-datagram-fec" }
raptorq-fec-transport = { path = "../raptor-fec/crates/raptorq-fec-transport" }
relay-session = { path = "../relay-session" }
rist-core-pure = { package = "rist-core", git = "https://github.com/wavey-ai/rist-rs.git" }
rist-mio-pure = { package = "rist-mio", git = "https://github.com/wavey-ai/rist-rs.git" }
rtmp-ingress = { git = "https://github.com/wavey-ai/rtmp-ingress.git" }
rustls = { version = "0.23.40", default-features = false, features = ["logging", "ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
soundkit-flac = { path = "../soundkit/soundkit-flac", default-features = false, features = ["packet-codec"] }
soundkit = { path = "../soundkit/soundkit" }
soundkit-opus = { path = "../soundkit/soundkit-opus" }
tokio = { version = "1.45", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "1"
av-upload-response = { path = "../av-service/av-upload-response", default-features = false, features = ["srt", "rist-pure"] }
av-web-service = { path = "../av-service/av-web-service" }

[dev-dependencies]
ed25519-dalek = "2.2"

[patch."https://github.com/wavey-ai/playlists.git"]
playlists = { path = "../playlists" }

[patch."https://github.com/wavey-ai/access-unit.git"]
access-unit = { path = "../access-unit" }

[patch."https://github.com/wavey-ai/raptor-fec.git"]
raptorq-datagram-fec = { path = "../raptor-fec/crates/raptorq-datagram-fec" }
raptorq-fec-transport = { path = "../raptor-fec/crates/raptorq-fec-transport" }

[patch."https://github.com/wavey-ai/rtmp-ingress.git"]
rtmp-ingress = { path = "../rtmp-ingress" }
