[package]
name = "av-contrib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Contributor-side byte and media access-unit helpers for av-mesh"
repository = "https://github.com/wavey-ai/av-contrib"
readme = "README.md"

[features]
default = []
media_capability_enforce_publish_v1 = []

[dependencies]
access-unit = "0.1.3"
anyhow = "1.0"
async-trait = "0.1"
boxer = { package = "wavey-boxer", version = "0.1.0" }
bytes = "1.9"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
form_urlencoded = "1.2"
futures-util = "0.3"
frame-header = "0.2.2"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h264 = { package = "wavey-h264", version = "0.1.1" }
av-hls = "0.1.0"
http = "1"
mpeg2ts-reader = { package = "wavey-mpeg2ts-reader", version = "0.1.0" }
media-object = "0.1.1"
media-capability = "0.1.1"
music-audio-session = "0.1.2"
playlists = "0.1.6"
raptorq-datagram-fec = "0.1.6"
raptorq-fec-transport = "0.1.4"
relay-session = "0.1.1"
rist-core-pure = { package = "rist-core", version = "0.1.0" }
rist-mio-pure = { package = "rist-mio", version = "0.1.0" }
rtmp-ingress = "0.1.1"
rustls = { version = "0.23.40", default-features = false, features = ["logging", "ring", "std"] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.6"
soundkit-flac = { version = "0.12.3", default-features = false, features = ["packet-codec"] }
soundkit = "0.12.3"
soundkit-opus = "0.12.3"
synchronized-stems-media = "0.1.1"
tokio = { version = "1.45", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
talkback-media = "0.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "1"
av-upload-response = { version = "0.1.0", default-features = false, features = ["srt", "rist-pure"] }
av-web-service = "0.1.0"

[dev-dependencies]
ed25519-dalek = "2.2"
